--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.9.2"
 serde = {version = "1.0.228",  features = ["derive"]}
 serde_json = "1.0.149"
 sha2 = "0.10.9"
+tempfile = "3.24.0"
