--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = {version = "0.4.42", features = ["serde"]}
 clap = {version = "4.5.54", features = ["derive"]}
+colored = "3.1.1"
 compio = {version = "0.17.0", features = ["macros", "process"]}
 exn = "0.2.1"
 hex = "0.4.3"
